fixed blockquotes too big, p too small

--- a/assets/themes/twitter/css/post.css
+++ b/assets/themes/twitter/css/post.css
@@ -71,11 +71,11 @@ figure img {
 }
 
 @media (max-width:480px) {
-  p {
+  p,blockquote {
     margin: 0;
     letter-spacing: 1px;
     line-height: 1.8em;
-    font-size: .9em;
+    font-size: 1em;
   }
 }
 
